correction header on mobile

--- a/style.css
+++ b/style.css
@@ -333,10 +333,9 @@ ul {
     }
 }
 
-@media (max-width: 390px) {
+@media (max-width: 400px) {
     .header-content  {
-        flex-direction: column;
-        align-items: stretch;
+        display: block;
         .right-part {
             text-align: right;
         }
